# DendroTweaks

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  setup.cfg
docs/source/: advanced.rst  basics.rst  changelog.rst  conf.py  glossary.rst  gui.rst  index.rst  installation.rst  literature.rst  requirements.txt  support.rst
docs/source/_static/: custom.css
docs/source/api/: analysis.rst  biophys.rst  morphology.rst
docs/source/tutorials/: Channels.ipynb  Morphology.ipynb  Morphology_paths_and_subtrees.ipynb  Morphology_topology.ipynb  Morphology_trees.ipynb  Network.ipynb  Quickstart.ipynb  Reduction.ipynb  Synaptic_clustering.ipynb  Synaptic_clusters.ipynb  convert_to_jaxley.ipynb  data_format.rst  tutorial_distributions.rst  tutorial_io.rst  tutorial_mod.rst  tutorial_morpho.rst  tutorial_quickstart.rst  tutorial_reduction.rst  tutorial_referencing.rst  tutorial_segmentation.rst  tutorial_standardization.rst  tutorial_swc.rst  tutorial_synapses.rst  tutorial_units.rst  tutorial_validation.rst
examples/: test_model_compatibility.ipynb
examples/Hay_2011/: Hay_2011.ipynb  Hay_2011_NEURON.py  Hay_2011_reduce.ipynb  about.md
examples/Hay_2011/biophys/: Hay_2011_full.json  Hay_2011_reduced.json  main.json  main_reduced_apic.json
examples/Hay_2011/membrane/: Hay_2011_full.json
examples/Park_2019/: Park_2019.ipynb  Park_2019_NEURON.py  Park_2019_load.ipynb  Park_2019_plain_NEURON.ipynb  Park_2019_plain_NEURON_net.ipynb  Park_2019_reduce.ipynb  Park_2019_reduced_NEURON.py  Park_Jaxley.ipynb  about.md
examples/Poirazi_2003/: Poirazi_2003.ipynb  Poirazi_2003_load.ipynb  about.md
examples/Test/: Jaxley.ipynb  Jaxley_test.ipynb  convert_to_jaxley.ipynb
examples/Toy/: Channels.ipynb  Simple_cell.ipynb  convert_to_jaxley.ipynb  mod_to_py.ipynb  test_nseg.ipynb
src/: Park_2019.ipynb  Park_2019_load.ipynb  Park_2019_plain_NEURON.ipynb  Park_2019_reduce.ipynb  Park_2019_vanilla.ipynb  Poirazi_2003.ipynb  test_nseg.ipynb
src/dendrotweaks/: __init__.py  model.py  model_io.py  model_simulation.py  path_manager.py  prerun.py  simulators.py  utils.py
tutorials/: Channels.ipynb  Quickstart.ipynb  Reduction.ipynb
(+178 files in other folders)
