[metadata]
name = dendrotweaks
version = attr: dendrotweaks.__version__
author = Roman Makarov
author_email = dendrotweaks@dendrites.gr
description = A toolbox for exploring dendritic dynamics
keywords = dendrites, neuron, model, simulation, neuroscience
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    scipy
    neuron
    symfit
    jinja2
    jupyter
    pyparsing
    quantities

include_package_data = True

[options.extras_require]
dev =
    sphinx
    furo
    sphinx-copybutton
    build

[options.packages.find]
where = src